fix some bugs on admin barangay manage and output request file export